--- a/data/config.env
+++ b/data/config.env
@@ -1,7 +1,6 @@
 PORT=4000
 
-MONGO_URL="mongodb://127.0.0.1:27017"
-
-JWT_SECRET=dhfhdffd
-
+MONGO_URL=mongodb+srv://anurag:kanswal@cluster0.4zhvg3l.mongodb.net/?retryWrites=true&w=majority
 NODE_ENV=Development
+
+JWT_SECRET=ddfdfdfhgj
